# sendgrid_client

./: .gitignore  Makefile  pyproject.toml  setversion.py
.github/workflows/: unittest.yaml
sendgrid_api/: _version.py  config.py  main.py
templates/: email_template.html
tests/: conftest.py  test_main.py
