[tool.poetry]
name = "sendgrid-client"
version = "0.1.0"
description = ""
authors = ["Kuba Gasiorowski <kgasiorowski123@gmail.com>"]
readme = "README.md"
packages = [{include = "sendgrid_client"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
sendgrid = "^6.10.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
black = "^23.7.0"
pytest-mock = "^3.11.1"
mypy = "^1.5.1"
twilio-stubs = "^0.2.0"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["live: mark a live test"]